# HiMQTT

./: Cargo.toml  README.md
.github/workflows/: deploy.yml
config/: himqtt.toml
deploy/: himqtt.service
scripts/: deploy_server.sh  mqtt_smoke_test.py  reliability_test.py  run_dev_test.sh  setup_postgres_native.sh
src/: main.rs
src/monitor/: mod.rs  web.rs
static/: monitor.html
