[package]
name = "himqtt"
version = "0.1.0"
edition = "2021"
description = "基于 rumqttd 的 MQTT 服务器，适用于 Ubuntu/Linux"

[dependencies]
anyhow = "1"
axum = { version = "0.7", features = ["json"] }
clap = { version = "4", features = ["derive"] }
config = "0.14"
futures-util = "0.3"
rumqttd = "0.20"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "sync", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
